--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - psql --version
   - psql -c 'create database travis_ci_test;' -U postgres
 script:
- - python manage.py runserver
+ - python manage.py test
 notifications:
   email:
     recipients:
